// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header renders correctly with defaults 1`] = `
.emotion-15 {
  z-index: 1;
}

.emotion-5 {
  font-weight: 700;
  background: #323232;
  color: #fff;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-width: 1030px;
  margin: 0 auto;
  padding: 0 0 0 15px;
}

.emotion-0 {
  display: none;
  width: 126px;
}

@media only screen and (min-width:768px) {
  .emotion-0 {
    display: block;
  }
}

.emotion-1 {
  font-size: 1.125rem;
  line-height: 0;
}

@media only screen and (min-width:768px) {
  .emotion-1 {
    padding-right: 71px;
    font-size: 1.375rem;
  }
}

.emotion-3 {
  height: 48px;
  width: 48px;
  padding: 0;
  line-height: 0;
  background: none;
  border: none;
  cursor: pointer;
}

@media only screen and (min-width:768px) {
  .emotion-3 {
    height: 55px;
    width: 55px;
  }
}

.emotion-2 {
  fill: white;
}

.emotion-14 {
  background: #fafafa;
}

.emotion-13 {
  width: 100%;
  height: 30px;
  font-size: 0.875rem;
  line-height: 0.875rem;
  text-align: center;
  box-shadow: 0 1px 1px 0 rgba(0,0,0,0.08),0 0 1px 0 rgba(0,0,0,0.04);
}

@media only screen and (min-width:768px) {
  .emotion-13 {
    height: 40px;
  }
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
}

.emotion-6::after {
  content: "";
  position: absolute;
  right: -1px;
  height: 15px;
  border-left: 1px solid #eeeeee;
}

.emotion-6::after:last-child {
  border-left: none;
}

.emotion-6 undefined {
  font-size: 1.125rem;
}

<div
  className="emotion-15"
>
  <div
    className="emotion-5"
  >
    <div
      className="emotion-4"
    >
      <QantasLogo
        className="emotion-0"
      />
      <span
        className="emotion-1"
      />
      <button
        aria-label=""
        className="emotion-3"
        onClick={[Function]}
        onKeyDown={[Function]}
        type="button"
      >
        <CrossIcon
          className="emotion-2"
          height="32px"
          width="32px"
        />
      </button>
    </div>
  </div>
  <Tabs
    Icon={null}
    endDate={null}
    endPlaceholder=""
    endSelectedLabel=""
    isDateRange={false}
    isSelectingStartDate={true}
    startDate={null}
    startPlaceholder=""
    startSelectedLabel=""
  />
  <div
    className="emotion-14"
  >
    <div
      className="emotion-13"
    >
      <div
        className="emotion-6"
        key="Tue"
      >
        Tue
      </div>
      <div
        className="emotion-6"
        key="Wed"
      >
        Wed
      </div>
      <div
        className="emotion-6"
        key="Thu"
      >
        Thu
      </div>
      <div
        className="emotion-6"
        key="Fri"
      >
        Fri
      </div>
      <div
        className="emotion-6"
        key="Sat"
      >
        Sat
      </div>
      <div
        className="emotion-6"
        key="Sun"
      >
        Sun
      </div>
      <div
        className="emotion-6"
        key="Mon"
      >
        Mon
      </div>
    </div>
  </div>
</div>
`;

exports[`Header renders correctly with props provided 1`] = `
.emotion-15 {
  z-index: 1;
}

.emotion-5 {
  font-weight: 700;
  background: #323232;
  color: #fff;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-width: 1030px;
  margin: 0 auto;
  padding: 0 0 0 15px;
}

.emotion-0 {
  display: none;
  width: 126px;
}

@media only screen and (min-width:768px) {
  .emotion-0 {
    display: block;
  }
}

.emotion-1 {
  font-size: 1.125rem;
  line-height: 0;
}

@media only screen and (min-width:768px) {
  .emotion-1 {
    padding-right: 71px;
    font-size: 1.375rem;
  }
}

.emotion-3 {
  height: 48px;
  width: 48px;
  padding: 0;
  line-height: 0;
  background: none;
  border: none;
  cursor: pointer;
}

@media only screen and (min-width:768px) {
  .emotion-3 {
    height: 55px;
    width: 55px;
  }
}

.emotion-2 {
  fill: white;
}

.emotion-14 {
  background: #fafafa;
}

.emotion-13 {
  width: 100%;
  height: 30px;
  font-size: 0.875rem;
  line-height: 0.875rem;
  text-align: center;
  box-shadow: 0 1px 1px 0 rgba(0,0,0,0.08),0 0 1px 0 rgba(0,0,0,0.04);
}

@media only screen and (min-width:768px) {
  .emotion-13 {
    height: 40px;
  }
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
}

.emotion-6::after {
  content: "";
  position: absolute;
  right: -1px;
  height: 15px;
  border-left: 1px solid #eeeeee;
}

.emotion-6::after:last-child {
  border-left: none;
}

.emotion-6 undefined {
  font-size: 1.125rem;
}

<div
  className="emotion-15"
>
  <div
    className="emotion-5"
  >
    <div
      className="emotion-4"
    >
      <QantasLogo
        className="emotion-0"
      />
      <span
        className="emotion-1"
      >
        header label
      </span>
      <button
        aria-label="close"
        className="emotion-3"
        onClick={[Function]}
        onKeyDown={[Function]}
        type="button"
      >
        <CrossIcon
          className="emotion-2"
          height="32px"
          width="32px"
        />
      </button>
    </div>
  </div>
  <Tabs
    Icon={[Function]}
    endDate="Wed Apr 24 2019"
    endPlaceholder="return when?"
    endSelectedLabel="return"
    isDateRange={false}
    isSelectingStartDate={false}
    startDate="Sun Apr 21 2019"
    startPlaceholder="depart when?"
    startSelectedLabel="depart"
  />
  <div
    className="emotion-14"
  >
    <div
      className="emotion-13"
    >
      <div
        className="emotion-6"
        key="Sat"
      >
        Sat
      </div>
      <div
        className="emotion-6"
        key="Sun"
      >
        Sun
      </div>
      <div
        className="emotion-6"
        key="Mon"
      >
        Mon
      </div>
      <div
        className="emotion-6"
        key="Tue"
      >
        Tue
      </div>
      <div
        className="emotion-6"
        key="Wed"
      >
        Wed
      </div>
      <div
        className="emotion-6"
        key="Thu"
      >
        Thu
      </div>
      <div
        className="emotion-6"
        key="Fri"
      >
        Fri
      </div>
    </div>
  </div>
</div>
`;
